# cloudness

./: README.md  pyproject.toml
cloudness/src/global_irradiance/: irradiance.py
cloudness/src/utils/: is_leap_year.py  trigonometric_functions.py
